--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </head>
 <body>
   <div id="loader">
-    <div class="logo" style="background-image:url('logo.jpg')"></div>
+    <div class="logo" style="background-image:url('#file.jpg')"></div>
     <div class="spinner"></div>
     <div style="margin-top:12px;color:var(--muted)">Preparing Medical Diagnostic Centre...</div>
   </div>
@@ -175,7 +175,7 @@
         <h3>Contact / Visit</h3>
         <p class="small">Address: Bablabona Hospital More, Domkal, Murshidabad, West Bengal — 742303</p>
         <p class="small">Email: help.medicaldiagnosticcentre@gmail.com</p>
-        <a class="btn-whatsapp" href="#" onclick="openWhatsAppQuick()">Chat on WhatsApp</a>
+        <a class="btn-whatsapp" href="https://wa.me/918001358535" onclick="openWhatsAppQuick()">Chat on WhatsApp</a>
       </div>
     </section>
   </main>
