--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="container">
       <nav>
         <div class="brand">
-          <img src="logo.jpg" alt="Logo" />
+          <img src="MedicalDiagnosticCentre/#file.jpg" alt="Logo" />
           <div>
             <div style="font-weight:700">Medical Diagnostic Centre</div>
             <div class="small">Reliable tests • Fast reports</div>
@@ -80,7 +80,7 @@
             <a href="#doctors">Doctors</a>
             <a href="#about">About</a>
             <a href="#contact">Contact</a>
-            <a class="btn-whatsapp" href="#" id="top-cta">Book on WhatsApp</a>
+            <a class="btn-whatsapp" href="https://wa.me/918001358535" id="top-cta">Book on WhatsApp</a>
           </div>
         </div>
       </nav>
@@ -104,6 +104,7 @@
                 <label>Doctor</label>
                 <select id="doctor" required>
                   <option value="">Select a doctor</option>
+                  <option>Dr. Prasenjit Majumdar (General Physican)</option>
                   <option>Dr. A. Mukherjee (Pathologist)</option>
                   <option>Dr. S. Das (Radiologist)</option>
                   <option>Dr. R. Chatterjee (General Physician)</option>
