--- a/index.html
+++ b/index.html
@@ -6,68 +6,259 @@
   <title>Medical Diagnostic Centre — Book via WhatsApp</title>
   <meta name="description" content="Medical Diagnostic Centre — Book appointments quickly through WhatsApp." />
   <style>
-    :root{--primary:#007bff;--muted:#6b7280;--bg:#f8fafc}
-    *{box-sizing:border-box}
-    body,html{height:100%;margin:0;font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial}
+    :root {
+      --primary: #007bff;
+      --muted: #6b7280;
+      --bg: #f8fafc;
+    }
+    * { box-sizing: border-box; }
+    body, html {
+      height: 100%;
+      margin: 0;
+      font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
+      background: var(--bg);
+    }
 
-    #loader{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;background:#fff;z-index:9999;flex-direction:column;transition:opacity .4s ease}
-    #loader .logo{width:120px;height:120px;background-size:contain;background-position:center;background-repeat:no-repeat;margin-bottom:16px}
-    .spinner{width:48px;height:48px;border-radius:50%;border:6px solid #eee;border-top-color:var(--primary);animation:spin 1s linear infinite}
-    @keyframes spin{to{transform:rotate(360deg)}}
+    /* ========== Loader ========== */
+    #loader {
+      position: fixed;
+      inset: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: #fff;
+      z-index: 9999;
+      flex-direction: column;
+      transition: opacity .4s ease;
+    }
+    #loader .logo {
+      width: 120px;
+      height: 120px;
+      background-image: url('logo.png'); /* your logo file */
+      background-size: contain;
+      background-position: center;
+      background-repeat: no-repeat;
+      border-radius: 50%; /* circular logo */
+      border: 3px solid #e6eef6;
+      box-shadow: 0 0 15px rgba(0, 123, 255, 0.2);
+      animation: pulse 1.8s ease-in-out infinite;
+      margin-bottom: 16px;
+    }
+    @keyframes pulse {
+      0%, 100% { transform: scale(1); opacity: 1; }
+      50% { transform: scale(1.08); opacity: 0.85; }
+    }
+    .spinner {
+      width: 48px;
+      height: 48px;
+      border-radius: 50%;
+      border: 6px solid #eee;
+      border-top-color: var(--primary);
+      animation: spin 1s linear infinite;
+    }
+    @keyframes spin { to { transform: rotate(360deg); } }
 
-    header{position:sticky;top:0;z-index:60;background:#fff;border-bottom:1px solid #e6eef6}
-    .container{max-width:1100px;margin:0 auto;padding:18px}
-    nav{display:flex;align-items:center;justify-content:space-between;gap:12px}
-    .brand{display:flex;align-items:center;gap:12px}
-    .brand img{height:52px;width:auto}
-    .navlinks{display:flex;gap:12px;align-items:center}
-    .navlinks a{color:#0b1220;text-decoration:none;padding:8px 10px;border-radius:8px}
-    .navlinks a:hover{background:#f4f8fb}
-    .btn-whatsapp{display:inline-flex;align-items:center;gap:8px;background:linear-gradient(90deg,var(--primary),#0067d1);color:#fff;padding:9px 12px;border-radius:10px;text-decoration:none;font-weight:600}
+    /* ========== Header / Navbar ========== */
+    header {
+      position: sticky;
+      top: 0;
+      z-index: 60;
+      background: #fff;
+      border-bottom: 1px solid #e6eef6;
+    }
+    .container {
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 18px;
+    }
+    nav {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 12px;
+    }
+    .brand {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+    }
+    .site-logo {
+      height: 58px;
+      width: auto;
+      border-radius: 12px;
+      object-fit: contain;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+      transition: transform 0.2s ease;
+    }
+    .site-logo:hover { transform: scale(1.05); }
+    .navlinks {
+      display: flex;
+      gap: 12px;
+      align-items: center;
+    }
+    .navlinks a {
+      color: #0b1220;
+      text-decoration: none;
+      padding: 8px 10px;
+      border-radius: 8px;
+    }
+    .navlinks a:hover { background: #f4f8fb; }
+    .btn-whatsapp {
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      background: linear-gradient(90deg, var(--primary), #0067d1);
+      color: #fff;
+      padding: 9px 12px;
+      border-radius: 10px;
+      text-decoration: none;
+      font-weight: 600;
+    }
 
-    main{padding:30px 18px}
-    .hero{display:grid;grid-template-columns:1fr 360px;gap:26px;align-items:start}
-    @media(max-width:920px){.hero{grid-template-columns:1fr}}
+    /* ========== Main Layout ========== */
+    main { padding: 30px 18px; }
+    .hero {
+      display: grid;
+      grid-template-columns: 1fr 360px;
+      gap: 26px;
+      align-items: start;
+    }
+    @media(max-width:920px) {
+      .hero { grid-template-columns: 1fr; }
+    }
+    h1 { font-size: 28px; margin: 0 0 10px; }
+    p.lead { margin: 0 0 16px; color: var(--muted); }
+    .card {
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 8px 30px rgba(15,15,15,0.06);
+      padding: 16px;
+    }
 
-    h1{font-size:28px;margin:0 0 10px}
-    p.lead{margin:0 0 16px;color:var(--muted)}
+    /* ========== Form ========== */
+    form label {
+      display: block;
+      font-weight: 600;
+      margin-bottom: 6px;
+      font-size: 14px;
+    }
+    input, select, textarea {
+      width: 100%;
+      padding: 10px;
+      border-radius: 8px;
+      border: 1px solid #e6eef6;
+      font-size: 14px;
+    }
+    .form-row {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 10px;
+    }
+    @media(max-width:520px) {
+      .form-row { grid-template-columns: 1fr; }
+    }
 
-    .card{background:#fff;border-radius:12px;box-shadow:0 8px 30px rgba(15,15,15,0.06);padding:16px}
+    /* ========== Doctors Grid ========== */
+    .doctor-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 16px;
+      margin-top: 12px;
+    }
+    .doctor-card {
+      padding: 16px;
+      border-radius: 10px;
+      border: 1px solid #f0f3f6;
+      background: #fff;
+      text-align: center;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+      cursor: pointer;
+      transition: transform .2s ease, box-shadow .2s ease;
+    }
+    .doctor-card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 4px 14px rgba(0,0,0,0.1);
+    }
+    .doctor-card img {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 8px;
+    }
 
-    form label{display:block;font-weight:600;margin-bottom:6px;font-size:14px}
-    input,select,textarea{width:100%;padding:10px;border-radius:8px;border:1px solid #e6eef6;font-size:14px}
-    .form-row{display:grid;grid-template-columns:1fr 1fr;gap:10px}
-    @media(max-width:520px){.form-row{grid-template-columns:1fr}}
+    /* ========== Doctor Modal ========== */
+    .doctor-details {
+      display: none;
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.6);
+      align-items: center;
+      justify-content: center;
+      z-index: 999;
+    }
+    .doctor-details .content {
+      background: #fff;
+      padding: 20px;
+      border-radius: 12px;
+      max-width: 400px;
+      width: 90%;
+      text-align: center;
+    }
 
-    .doctor-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:16px;margin-top:12px}
-    .doctor-card{padding:16px;border-radius:10px;border:1px solid #f0f3f6;background:#fff;text-align:center;box-shadow:0 2px 10px rgba(0,0,0,0.05);cursor:pointer;transition:transform .2s ease, box-shadow .2s ease}
-    .doctor-card:hover{transform:translateY(-4px);box-shadow:0 4px 14px rgba(0,0,0,0.1)}
-    .doctor-card img{width:100px;height:100px;border-radius:50%;object-fit:cover;margin-bottom:8px}
+    /* ========== Footer ========== */
+    footer {
+      padding: 22px 18px;
+      background: #fafafa;
+      margin-top: 30px;
+      border-top: 1px solid #eef2f7;
+    }
+    .small { font-size: 13px; color: var(--muted); }
 
-    .doctor-details{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.6);align-items:center;justify-content:center;z-index:999}
-    .doctor-details .content{background:#fff;padding:20px;border-radius:12px;max-width:400px;width:90%;text-align:center}
+    /* ========== WhatsApp Floating Button ========== */
+    .wa-float {
+      position: fixed;
+      right: 18px;
+      bottom: 18px;
+      background: #25d366;
+      color: #fff;
+      border-radius: 999px;
+      padding: 12px 14px;
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      z-index: 80;
+      box-shadow: 0 8px 20px rgba(37,211,102,0.16);
+      text-decoration: none;
+    }
 
-    footer{padding:22px 18px;background:#fafafa;margin-top:30px;border-top:1px solid #eef2f7}
-    .small{font-size:13px;color:var(--muted)}
-
-    .wa-float{position:fixed;right:18px;bottom:18px;background:#25d366;color:#fff;border-radius:999px;padding:12px 14px;display:flex;gap:10px;align-items:center;z-index:80;box-shadow:0 8px 20px rgba(37,211,102,0.16);text-decoration:none}
-
-    .menu-btn{display:none;border:0;background:transparent;font-size:20px}
-    @media(max-width:880px){.navlinks{display:none}.menu-btn{display:inline-block}}
+    .menu-btn {
+      display: none;
+      border: 0;
+      background: transparent;
+      font-size: 20px;
+    }
+    @media(max-width:880px) {
+      .navlinks { display: none; }
+      .menu-btn { display: inline-block; }
+    }
   </style>
 </head>
+
 <body>
+  <!-- Loader Section -->
   <div id="loader">
-    <div class="logo" style="background-image:url('#file.jpg')"></div>
+    <div class="logo"></div>
     <div class="spinner"></div>
     <div style="margin-top:12px;color:var(--muted)">Preparing Medical Diagnostic Centre...</div>
   </div>
 
+  <!-- Header -->
   <header>
     <div class="container">
       <nav>
         <div class="brand">
-          <img src="MedicalDiagnosticCentre/#file.jpg" alt="Logo" />
+          <img src="#file.jpg" alt="Medical Diagnostic Centre Logo" class="site-logo" />
           <div>
             <div style="font-weight:700">Medical Diagnostic Centre</div>
             <div class="small">Reliable tests • Fast reports</div>
@@ -87,6 +278,7 @@
     </div>
   </header>
 
+  <!-- Main Content -->
   <main class="container">
     <section id="home" class="hero">
       <div>
@@ -104,7 +296,7 @@
                 <label>Doctor</label>
                 <select id="doctor" required>
                   <option value="">Select a doctor</option>
-                  <option>Dr. Prasenjit Majumdar (General Physican)</option>
+                  <option>Dr. Prasenjit Majumdar (General Physician)</option>
                   <option>Dr. A. Mukherjee (Pathologist)</option>
                   <option>Dr. S. Das (Radiologist)</option>
                   <option>Dr. R. Chatterjee (General Physician)</option>
@@ -196,45 +388,45 @@
     const WA_NUMBER = '918001358535';
     let selectedDoctor = '';
 
-    function openWhatsAppQuick(){
+    function openWhatsAppQuick() {
       const msg = 'Hello! I would like to book an appointment at Medical Diagnostic Centre.';
-      window.open(`https://wa.me/${WA_NUMBER}?text=${encodeURIComponent(msg)}`,'_blank');
+      window.open(`https://wa.me/${WA_NUMBER}?text=${encodeURIComponent(msg)}`, '_blank');
     }
 
-    function openWhatsAppFromForm(e){
+    function openWhatsAppFromForm(e) {
       e.preventDefault();
-      const name=document.getElementById('name').value;
-      const phone=document.getElementById('phone').value;
-      const doctor=document.getElementById('doctor').value;
-      const date=document.getElementById('date').value;
-      const notes=document.getElementById('notes').value;
-      let msg=`Appointment Booking Request:%0AName: ${name}%0APhone: ${phone}%0ADoctor: ${doctor}`;
-      if(date) msg+=`%0ADate: ${date}`;
-      if(notes) msg+=`%0ANotes: ${notes}`;
-      window.open(`https://wa.me/${WA_NUMBER}?text=${msg}`,'_blank');
+      const name = document.getElementById('name').value;
+      const phone = document.getElementById('phone').value;
+      const doctor = document.getElementById('doctor').value;
+      const date = document.getElementById('date').value;
+      const notes = document.getElementById('notes').value;
+      let msg = `Appointment Booking Request:%0AName: ${name}%0APhone: ${phone}%0ADoctor: ${doctor}`;
+      if (date) msg += `%0ADate: ${date}`;
+      if (notes) msg += `%0ANotes: ${notes}`;
+      window.open(`https://wa.me/${WA_NUMBER}?text=${msg}`, '_blank');
     }
 
-    function showDoctor(name,spec,time){
+    function showDoctor(name, spec, time) {
       selectedDoctor = name;
-      document.getElementById('docName').innerText=name;
-      document.getElementById('docSpec').innerText=spec;
-      document.getElementById('docTime').innerText='Available: '+time;
-      document.getElementById('doctorModal').style.display='flex';
+      document.getElementById('docName').innerText = name;
+      document.getElementById('docSpec').innerText = spec;
+      document.getElementById('docTime').innerText = 'Available: ' + time;
+      document.getElementById('doctorModal').style.display = 'flex';
     }
 
-    function bookDoctor(){
+    function bookDoctor() {
       const msg = `Hello! I would like to book an appointment with ${selectedDoctor} at Medical Diagnostic Centre.`;
-      window.open(`https://wa.me/${WA_NUMBER}?text=${encodeURIComponent(msg)}`,'_blank');
+      window.open(`https://wa.me/${WA_NUMBER}?text=${encodeURIComponent(msg)}`, '_blank');
     }
 
-    function closeDoctor(){
-      document.getElementById('doctorModal').style.display='none';
+    function closeDoctor() {
+      document.getElementById('doctorModal').style.display = 'none';
     }
 
-    window.addEventListener('load',()=>{
-      const loader=document.getElementById('loader');
-      loader.style.opacity='0';
-      setTimeout(()=>loader.remove(),400);
+    window.addEventListener('load', () => {
+      const loader = document.getElementById('loader');
+      loader.style.opacity = '0';
+      setTimeout(() => loader.remove(), 400);
     });
   </script>
 </body>
