--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     <div class="container">
       <nav>
         <div class="brand">
-          <img src="#file.jpg" alt="Medical Diagnostic Centre Logo" class="site-logo" />
+          <img src="PhotoRoom-20251017_210031.png" alt="Medical Diagnostic Centre Logo" class="site-logo" />
           <div>
             <div style="font-weight:700">Medical Diagnostic Centre</div>
             <div class="small">Reliable tests • Fast reports</div>
@@ -322,23 +322,28 @@
         <h2>Our Doctors</h2>
         <p class="small">Click on a doctor to see more details or book directly via WhatsApp.</p>
         <div class="doctor-grid">
+          <div class="doctor-card" onclick="showDoctor('Dr. Prasenjit Majumdar','General Physician','Mon–Fri: 10 AM – 4 PM')">
+            <img src="istockphoto-177373093-612x612.jpg" alt="Doctor" />
+            <h4>Dr. Prasenjit Majumdar</h4>
+            <p class="small">General Physician</p>
+          </div>
           <div class="doctor-card" onclick="showDoctor('Dr. A. Mukherjee','Pathologist','Mon–Fri: 9 AM – 2 PM')">
-            <img src="https://via.placeholder.com/100" alt="Doctor" />
+            <img src="photo-1582750433449-648ed127bb54.jpg" alt="Doctor" />
             <h4>Dr. A. Mukherjee</h4>
             <p class="small">Pathologist</p>
           </div>
           <div class="doctor-card" onclick="showDoctor('Dr. S. Das','Radiologist','Mon–Sat: 10 AM – 4 PM')">
-            <img src="https://via.placeholder.com/100" alt="Doctor" />
+            <img src="photo-1612349317150-e413f6a5b16d.jpg" alt="Doctor" />
             <h4>Dr. S. Das</h4>
             <p class="small">Radiologist</p>
           </div>
           <div class="doctor-card" onclick="showDoctor('Dr. R. Chatterjee','General Physician','Tue–Sun: 8 AM – 1 PM')">
-            <img src="https://via.placeholder.com/100" alt="Doctor" />
+            <img src="istockphoto-1292015214-612x612.jpg" alt="Doctor" />
             <h4>Dr. R. Chatterjee</h4>
             <p class="small">General Physician</p>
           </div>
           <div class="doctor-card" onclick="showDoctor('Dr. M. Roy','Cardiologist','Mon–Fri: 11 AM – 3 PM')">
-            <img src="https://via.placeholder.com/100" alt="Doctor" />
+            <img src="360_F_320744517_TaGkT7aRlqqWdfGUuzRKDABtFEoN5CiO.jpg" alt="Doctor" />
             <h4>Dr. M. Roy</h4>
             <p class="small">Cardiologist</p>
           </div>
