--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     #loader .logo {
       width: 120px;
       height: 120px;
-      background-image: url('#file.jpg'); /* your logo file */
+      background-image: url('file.jpg'); /* your logo file */
       background-size: contain;
       background-position: center;
       background-repeat: no-repeat;
