--- a/index.html
+++ b/index.html
@@ -271,6 +271,8 @@
             <a href="#doctors">Doctors</a>
             <a href="#about">About</a>
             <a href="#contact">Contact</a>
+            <a href="privacy.html">Privacy Policy</a>
+            <a href="terms.html">Terms &amp; Conditions</a>
             <a class="btn-whatsapp" href="https://wa.me/918001358535" id="top-cta">Book on WhatsApp</a>
           </div>
         </div>
@@ -382,12 +384,17 @@
     <div class="container">
       <div style="display:flex;justify-content:space-between;align-items:center;gap:10px;flex-wrap:wrap">
         <div class="small">© <strong>Medical Diagnostic Centre</strong> — All rights reserved</div>
+        <div style="display:flex;gap:12px;align-items:center;flex-wrap:wrap">
+        <a class="small" href="privacy.html">Privacy Policy</a>
+        <a class="small" href="terms.html">Terms &amp; Conditions</a>
+         <a class="small" href="https://omaairsk.github.io/iamfardinsk/" target="_blank" rel="noopener noreferrer">Developer: iamfardinsk</a>
         <div class="small">Email: help.medicaldiagnosticcentre@gmail.com • WhatsApp: +91 8001358535</div>
       </div>
     </div>
   </footer>
 
-  <a class="wa-float" href="#" id="waFloat">WhatsApp</a>
+
+  <a class="wa-float" href="https://wa.me/918001358535" id="waFloat">WhatsApp</a>
 
   <script>
     const WA_NUMBER = '918001358535';
