--- a/index.html
+++ b/index.html
@@ -299,10 +299,9 @@
                 <select id="doctor" required>
                   <option value="">Select a doctor</option>
                   <option>Dr. Prasenjit Majumdar (General Physician)</option>
-                  <option>Dr. A. Mukherjee (Pathologist)</option>
-                  <option>Dr. S. Das (Radiologist)</option>
-                  <option>Dr. R. Chatterjee (General Physician)</option>
-                  <option>Dr. M. Roy (Cardiologist)</option>
+                  <option>Dr. Satyam (Gynecologist)</option>
+                  <option>Dr.******* (Radiologist)</option>
+                  <option>Dr.******* (Cardiologist)</option>
                 </select>
               </div>
               <div>
@@ -328,25 +327,28 @@
             <img src="istockphoto-177373093-612x612.jpg" alt="Doctor" />
             <h4>Dr. Prasenjit Majumdar</h4>
             <p class="small">General Physician</p>
+             <p class="small">M.B.B.S (KOL), MD.(WBUHS) & (WBMC)</p>
           </div>
           <div class="doctor-card" onclick="showDoctor('Dr. A. Mukherjee','Pathologist','Mon–Fri: 9 AM – 2 PM')">
             <img src="photo-1582750433449-648ed127bb54.jpg" alt="Doctor" />
-            <h4>Dr. A. Mukherjee</h4>
-            <p class="small">Pathologist</p>
+            <h4>Dr. Satyam</h4>
+            <p class="small">Gynecologist</p>
+            <p class="small">M.B.B.S, M.D, D.N.B (DGO), PCPNDT
+Ex Senior Resident AIIMS, New Delhi Consultant Obstetrics, Gynaecology & Infertility Specialist  </p>
           </div>
           <div class="doctor-card" onclick="showDoctor('Dr. S. Das','Radiologist','Mon–Sat: 10 AM – 4 PM')">
             <img src="photo-1612349317150-e413f6a5b16d.jpg" alt="Doctor" />
-            <h4>Dr. S. Das</h4>
+            <h4>Dr. *******</h4>
             <p class="small">Radiologist</p>
           </div>
           <div class="doctor-card" onclick="showDoctor('Dr. R. Chatterjee','General Physician','Tue–Sun: 8 AM – 1 PM')">
             <img src="istockphoto-1292015214-612x612.jpg" alt="Doctor" />
-            <h4>Dr. R. Chatterjee</h4>
+            <h4>Dr. *******</h4>
             <p class="small">General Physician</p>
           </div>
           <div class="doctor-card" onclick="showDoctor('Dr. M. Roy','Cardiologist','Mon–Fri: 11 AM – 3 PM')">
             <img src="360_F_320744517_TaGkT7aRlqqWdfGUuzRKDABtFEoN5CiO.jpg" alt="Doctor" />
-            <h4>Dr. M. Roy</h4>
+            <h4>Dr. *******</h4>
             <p class="small">Cardiologist</p>
           </div>
         </div>
