--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
             <p class="small">General Physician</p>
              <p class="small">M.B.B.S (KOL), MD.(WBUHS) & (WBMC)</p>
           </div>
-          <div class="doctor-card" onclick="showDoctor('Dr. A. Mukherjee','Pathologist','Mon–Fri: 9 AM – 2 PM')">
+          <div class="doctor-card" onclick="showDoctor('Dr. Satyam','Gynecologist','Mon–Fri: 10 AM – 4 PM')">
             <img src="photo-1582750433449-648ed127bb54.jpg" alt="Doctor" />
             <h4>Dr. Satyam</h4>
             <p class="small">Gynecologist</p>
